# fastLowess-py

./: .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  conda-forge-update.yml  release.yml
benchmarks/: INTERPRETATION.md  compare_benchmark.py
benchmarks/R/: benchmark.R
benchmarks/fastLowess/: benchmark.py  benchmark.rs
benchmarks/fastlowess/: benchmark.py
benchmarks/output/: fastLowess_benchmark.json  fastlowess_benchmark.json  fastlowess_benchmark_serial.json  r_benchmark.json  statsmodels_benchmark.json
benchmarks/statsmodels/: benchmark.py
docs/source/: advanced_usage.rst  benchmarks.rst  conf.py  execution_modes.rst  index.rst  installation.rst  parameters.rst  quickstart.rst
examples/: batch_smoothing.py  online_smoothing.py  streaming_smoothing.py
fastLowess/: __init__.py
fastlowess/: __init__.py
src/: lib.rs
tests/: test_fastlowess.py
validation/: INTERPRETATION.md  compare_validation.py
validation/R/: validate.R
validation/fastLowess/: validate.py
validation/fastlowess/: validate.py
validation/output/: fastLowess_validate.json  statsmodels_validate.json
validation/output/fastLowess/: 01_tiny_linear.json  02_sine_standard.json  03_sine_robust.json  04_large_scale.json  05_high_smoothness.json  06_low_smoothness.json  07_constant.json  08_step_func.json  09_end_effects_left.json  10_end_effects_right.json  11_sparse_data.json  12_dense_data.json  13_iter_2.json  14_interpolate_exact.json  15_zero_variance.json
validation/output/r/: 01_tiny_linear.json  02_sine_standard.json  03_sine_robust.json  04_large_scale.json  05_high_smoothness.json  06_low_smoothness.json  07_constant.json  08_step_func.json  09_end_effects_left.json  10_end_effects_right.json  11_sparse_data.json  12_dense_data.json  13_iter_2.json  14_interpolate_exact.json  15_zero_variance.json
